[package]
name = "vkoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync"] }
dotenv = "0.15.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
url = "2.5.4"
reqwest = { version = "0.13.2", features = ["json", "query"] }
dotenvy = "0.15.7"
dptree = "0.3"
