[package]
name = "vkoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = { version = "0.1.40", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
reqwest = { version = "0.13.2", features = ["json", "query"] }
dotenvy = "0.15.7"
dptree = "0.3"
