[package]
name = "vkoxide"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "vkoxide is a lightweight, strictly asynchronous SDK and framework in Rust designed for building VKontakte community bots using the Bots Long Poll API."
authors = ["iTmage Lab <contact@itmagelab.ru>"]
readme = "README.md"
repository = "https://gitverse.ru/itmagelab/vkoxide"
homepage = "https://gitverse.ru/itmagelab/vkoxide"
keywords = ["VK", "API"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = { version = "0.1.40", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
reqwest = { version = "0.13.2", features = ["json", "query"] }
dotenvy = "0.15.7"
dptree = "0.3"
